语音命令模块的开发（ASR + NLU + 事件联动）
- VoiceNluService: 规则中文 NLU 解析器，支持 CREATE/QUERY/UPDATE/DELETE/REMINDER 五意图
- VoiceCommandService: 编排器，串联 ASR→NLU→事件联动→操作日志
- VoiceWebSocketHandler: 升级为全链路（音频→ASR→NLU→指令执行→WS响应）
- VoiceCommandLogService: 语音指令日志记录与查询
- VoiceCommand/VoiceLog Controller: 文本指令 + 节日祝福 + 日志接口
- NluResult: NLU 实体模型（意图/实体/置信度/反问字段）
- pom.xml: mybatis-plus 降至 3.5.9（3.5.15 不可达）